# thenvoi-sdk-python

./: .dockerignore  .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_SDK_DOCKER.md  CLAUDE_SDK_DOCKER_DESIGN.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATING-v0.3.0.md  README.md  agent_config.yaml.example  autoresearch-results-v2.tsv  bridge_config.yaml.example  docker-compose.claude-sdk.yml  docker-compose.examples.yml  docker-compose.yml  pyproject.toml  release-please-config.json
.desloppify/: config.json  review_packet_blind.json  state-python.json
.desloppify/review_packets/: holistic_packet_20260301_043656.json  holistic_packet_20260301_044851.json  holistic_packet_20260301_050559.json  holistic_packet_20260301_052628.json  holistic_packet_20260301_055122.json  holistic_packet_20260301_063623.json  holistic_packet_20260301_071915.json  holistic_packet_20260301_124333.json  holistic_packet_20260301_133351.json  holistic_packet_20260301_140708.json  holistic_packet_20260301_144302.json  holistic_packet_20260301_152549.json  holistic_packet_20260301_171008.json  holistic_packet_20260301_172715.json  holistic_packet_20260302_162256.json  holistic_packet_20260302_164627.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml  release.yml
.letta/: settings.local.json
docker/: Dockerfile.adapter  Dockerfile.mcp  docker-compose.bridge.yml  docker-compose.letta.yml  entrypoint.sh
docker/claude-sdk/: Dockerfile  entrypoint.sh  runner.py
docker/claude_code/: Dockerfile  README.md  docker-compose.plan-review.yml  docker-compose.yml  entrypoint.sh  runner.py
docker/claude_sdk/: Dockerfile  entrypoint.sh  runner.py
docker/codex/: Dockerfile  docker-compose.multi.yml  docker-compose.plan-review.yml  docker-compose.yml  entrypoint.sh  runner.py  smoke.sh  strip_uv_sources.py
docker/letta/: Dockerfile  runner.py
docker/multi-agent/: .env.example  README.md  claude-planner.yaml.example  docker-compose.yml
docker/shared/: repo_init.py
docs/: websocket-stability.md
examples/: __init__.py  run_agent.py
examples/20-questions-arena/: README.md  guesser_agent.py  prompts.py  setup_logging.py  start_game.py  thinker_agent.py
examples/a2a_bridge/: 01_basic_agent.py  02_with_auth.py  README.md  __init__.py  setup_logging.py
examples/a2a_gateway/: 01_basic_gateway.py  02_with_demo_agent.py  README.md  __init__.py  basic_gateway.py  setup_logging.py  with_demo_agent.py
examples/acp/: 01_basic_acp_server.py  02_acp_client.py  03_acp_server_with_routing.py  04_acp_client_rich_streaming.py  05_acp_server_push_notifications.py  06_cursor_client.py  07_cursor_server.py  07_jetbrains_server.py  08_acp_bridge_architecture.py  README.md  setup_logging.py
examples/agentcore/: README.md  agentcore_llm_server.py  run_agentcore.py
examples/anthropic/: 01_basic_agent.py  02_custom_instructions.py  03_tom_agent.py  04_jerry_agent.py  05_contact_management.py  README.md  setup_logging.py  thenvoi_anthropic_agent.py
examples/arena/: guesser_agent.py  prompts.py  setup_logging.py  start_game.py  thinker_agent.py
examples/claude-code/: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml  runner.py  thenvoi-claude-sdk.tar
examples/claude_code/: .env.example  .env.plan-review.example  Dockerfile  README.md  agent_config.implementer.yaml.example  agent_config.planner.yaml.example  agent_config.reviewer.yaml.example  agent_config.yaml.example  docker-compose.plan-review.yml  docker-compose.yml  entrypoint.sh  runner.py
examples/claude_code_apikey_docker/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  example_agent.yaml  healthcheck.py  runner.py
examples/claude_code_desktop/: .env.example  01_basic_agent.py  README.md  __init__.py  setup_logging.py
examples/claude_sdk/: 01_basic_agent.py  02_extended_thinking.py  03_custom_tools.py  03_tom_agent.py  04_jerry_agent.py  DOCKER_GUIDE.md  README.md  __init__.py  prompts.py  setup_logging.py  thenvoi_claude_sdk_agent.py
examples/claude_sdk_docker/: Dockerfile  README.md  create_agents.py  docker-compose.yml  entrypoint.sh  example_agent.yaml  runner.py  test_communication.py
examples/codex/: .env.plan-review.example  01_basic_agent.py  README.md  basic_agent.py  docker-compose.yml  (+3 more)
my-agent/: README.md
parlant-data/: canned_responses.json  capabilities.json  context_variables.json  customers.json  evaluations.json  glossary_tags.json  guideline_tool_associations.json  guidelines.json  journey_associations.json  relationships.json  services.json  sessions.json  tags.json
scripts/: codex_docker_smoke.sh  codex_stdio_harness.py  codex_ws_harness.py  config.example.yaml  dump_room_added_payload.py  reinstall-rest-client.sh  run_agent2.py  run_bridge.sh  run_mcp.sh  test_three_codex_agents.py  test_two_codex_agents.py
tests/: FRAMEWORK_VERIFICATION.md  __init__.py  conftest.py  conftest_integration.py  examples.py  fixtures.py  test_agent.py  test_agent_contacts.py  test_agent_module.py  test_capability_gating_e2e.py  test_config.py  test_config_defaults.py  test_config_loader_module.py  test_config_namespace.py  test_config_runtime.py  test_example_bootstrap.py  test_framework_option.py  test_integration_cleanup_policy.py  test_integration_fixture_guard.py  test_integration_marker_registry.py  test_integration_policy_contract.py  test_integrations_base.py  test_no_clean_mode.py  test_platform_runtime.py  test_prompts.py  test_runner_core.py  test_session_config.py  test_session_shutdown.py  test_session_sync.py  test_smoke.py  test_testing_config_loader.py
thenvoi-bridge/: .dockerignore  .env.example  Dockerfile  agentcore_llm_server.py  docker-compose.yml  echo_server.py  langchain_agent_server.py  run_agentcore.py  test_bridge_full_e2e.py  test_bridge_integration.py  test_local.py  test_platform.py
user_agents/: README.md  agent1.yaml  agent2.yaml  docker-compose.yml  example.env  example_agent.yaml
(+1227 files in other folders)
