[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thenvoi-sdk"
version = "0.1.1"
description = "A Python SDK for Thenvoi API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "thenvoi" }]
license = { text = "MIT" }
keywords = ["sdk", "thenvoi", "api", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "thenvoi-client-rest==0.0.2",
    "phoenix-channels-python-client @ git+https://github.com/thenvoi/phoenix-channels-python-client-alpha.git",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.16",
]

[project.optional-dependencies]
pydantic-ai = [
    "pydantic-ai-slim>=1.0.0",
]
anthropic = [
    "anthropic>=0.75.0",
]
langgraph = [
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.4.0",  # 0.4.0+ required for langchain 1.0 compatibility
    "langchain-text-splitters>=0.3.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
]
claude_sdk = [
    "claude-agent-sdk>=0.1.0",  # Requires Node.js 20+ and @anthropic-ai/claude-code CLI
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",  # Already in main deps, for mocking
    # Include pydantic-ai for testing
    "pydantic-ai-slim>=1.0.0",
    # Include anthropic for testing
    "anthropic>=0.75.0",
    # Include langgraph for testing
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.4.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
    # Development tools
    "pre-commit>=3.0.0",
    "ruff>=0.8.0",
    "pyrefly>=0.18.0",
    "commitizen>=3.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["thenvoi", "thenvoi.*"]
namespaces = false

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.pyrefly]
project_excludes = [
    "tests/**",                 # Tests use mocks with duck typing
    "examples/**",              # Examples use local imports
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "src/thenvoi/__init__.py:__version__",
]
tag_format = "v$version"

[tool.ruff]
