[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thenvoi-sdk"
version = "0.2.7"
description = "A Python SDK for Thenvoi API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "thenvoi" }]
license = { text = "MIT" }
keywords = ["sdk", "thenvoi", "api", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "thenvoi-client-rest==0.0.7",
    "phoenix-channels-python-client>=0.1.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
codex = [
    "websockets>=13.0",
]
opencode = [
    "httpx>=0.24.0",
    "mcp>=1.25.0",
]
letta = [
    "letta-client>=0.1.0",
]
pydantic-ai = [
    "pydantic-ai-slim>=1.56.0",
    "openai>=1.0.0",
    "anthropic>=0.75.0",  # required by examples/pydantic_ai/02_custom_instructions.py
]
anthropic = [
    "anthropic>=0.75.0",
]
langgraph = [
    "langchain>=1.0.0",
    "langchain-core>=1.2.11",
    "langgraph>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.4.0",  # 0.4.0+ required for langchain 1.0 compatibility
    "langchain-text-splitters>=0.3.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
]
claude_sdk = [
    "claude-agent-sdk>=0.1.16",  # Requires Node.js 20+ and @anthropic-ai/claude-code CLI
]
parlant = [
    "parlant>=3.0.0",
    "openai>=1.0.0",
    "werkzeug>=3.1.6",
]
crewai = [
    "crewai==1.14.3",
    "openai>=2.0.0",  # crewai 1.14.3 requires openai>=2.0.0
    "nest-asyncio>=1.6.0",  # Required for sync-to-async bridging in CrewAI tools
    "pillow>=12.1.1",
]
gemini = [
    "google-genai>=1.43.0",  # httpx is a transitive dep used for retry exception types
]
a2a = [
    "a2a-sdk>=0.3.22,<1.0",  # Official A2A Python SDK; brings protobuf>=5.29.5 transitively
]
a2a_gateway = [
    "a2a-sdk>=0.3.22,<1.0",  # Official A2A Python SDK; brings protobuf>=5.29.5 transitively
    "starlette>=0.40.0",  # HTTP server framework
    "uvicorn>=0.32.0",  # ASGI server
    "python-multipart>=0.0.22",
]
a2a_gateway_demo = [
    "a2a-sdk>=0.3.22,<1.0",      # A2A client for calling gateway peers
    "starlette>=0.40.0",    # HTTP server
    "uvicorn>=0.32.0",      # ASGI server
    "langgraph>=1.0.0",     # LangGraph for orchestrator agent
    "langchain-openai>=0.3.0",  # OpenAI model for LLM
    "click>=8.0.0",         # CLI for demo orchestrator
]
acp = [
    "agent-client-protocol>=0.9.0",  # ACP Python SDK
    "mcp>=1.25.0",
    "starlette>=0.40.0",
    "uvicorn>=0.32.0",
]
bridge = [
    "aiohttp>=3.9,<4",      # Health check HTTP server
    "python-dotenv>=1.2.2",    # Environment variable loading
]
bridge_agentcore = [
    # Duplicates bridge deps intentionally — pip extras cannot depend on
    # sibling extras, so we list them explicitly here.
    "aiohttp>=3.9,<4",
    "python-dotenv>=1.2.2",
    "boto3>=1.35.0",
]
google_adk = [
    "google-adk>=1.0.0,<2",
]
bridge_langchain = [
    "httpx>=0.24.0",
]

# dev extra includes ALL framework deps for testing EXCEPT parlant,
# which conflicts with crewai 1.14.3 (see tool.uv.conflicts below).
# To run parlant tests, install with: uv sync --extra dev-parlant
dev = [
    "thenvoi-testing-python>=0.1.2",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-rerunfailures>=14.0.0",
    "pytest-timeout>=2.4.0",
    "httpx>=0.24.0",  # Already in main deps, for mocking
    # Include pydantic-ai for testing
    "pydantic-ai-slim>=1.56.0",
    # Include anthropic for testing
    "anthropic>=0.75.0",
    # Include langgraph for testing
    "langchain>=1.0.0",
    "langchain-core>=1.2.11",
    "langgraph>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.4.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
    # Include a2a-sdk for testing
    "a2a-sdk>=0.3.22,<1.0",
    # Include a2a_gateway deps for testing
    "starlette>=0.40.0",
    "uvicorn>=0.32.0",
    # Include a2a_gateway_demo deps for testing
    "click>=8.0.0",
    # Include crewai for testing
    "crewai==1.14.3",
    "nest-asyncio>=1.6.0",  # Required for CrewAI adapter sync-to-async bridging
    # Include ACP deps for testing
    "agent-client-protocol>=0.9.0",
    "mcp>=1.25.0",
    # Include Gemini SDK for testing
    "google-genai>=1.43.0",
    # Include google-adk for testing
    "google-adk>=1.0.0,<2",
    # Include bridge deps for testing
    "aiohttp>=3.9,<4",
    "python-dotenv>=1.2.2",
    # Include bridge_agentcore deps for testing
    "boto3>=1.35.0",
    # Development tools
    "pre-commit>=3.0.0",
    "ruff>=0.8.0",
    "pyrefly>=0.18.0",
    "commitizen>=3.13.0",
]

# Parlant-only dev extra for testing parlant adapter in isolation.
# Cannot be combined with dev/crewai due to opentelemetry-sdk conflicts.
dev-parlant = [
    "thenvoi-testing-python>=0.1.2",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-rerunfailures>=14.0.0",
    "pytest-timeout>=2.4.0",
    "httpx>=0.24.0",
    # Parlant and its deps
    "parlant>=3.0.0",
    "openai>=1.0.0",
    "werkzeug>=3.1.6",
    # Development tools
    "ruff>=0.8.0",
    "pyrefly>=0.18.0",
]

[project.scripts]
thenvoi-acp = "thenvoi.integrations.acp.cli:entry_point"
thenvoi-trigger = "thenvoi.cli.trigger:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["thenvoi", "thenvoi.*"]
namespaces = false

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-v"
# Global safety net: catch runaway unit tests. Integration and E2E tests
# override to 120s via pytest_collection_modifyitems in their conftest.
timeout = 30
markers = [
    "requires_api: marks tests as requiring real API credentials (skipped in CI)",
    "e2e: marks tests as end-to-end (requires live services)",
]

[tool.uv]
# Ensure uv.lock stays installable on the platforms we use locally and in CI
# when a dependency only publishes wheels and no source distribution.
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

# crewai 1.14.3 and parlant >=3.0.0 are fundamentally incompatible:
#   - parlant <3.1 requires openai <2.0, but crewai 1.14.3 requires openai >=2.0
#   - parlant >=3.1 requires opentelemetry-sdk >=1.37, but crewai 1.14.3 pins ~=1.34.0
# Declaring them as conflicting extras lets uv resolve each in a separate fork.
conflicts = [
    [
        { extra = "crewai" },
        { extra = "parlant" },
    ],
    [
        { extra = "dev" },
        { extra = "parlant" },
    ],
    [
        { extra = "dev" },
        { extra = "dev-parlant" },
    ],
    [
        { extra = "dev-parlant" },
        { extra = "crewai" },
    ],
]

[tool.pyrefly]
project_includes = [
    "src/**/*.py",              # Only check source files
]
project_excludes = [
    "tests/**",                 # Tests use mocks with duck typing
    "examples/**",              # Examples use local imports
    "thenvoi-bridge/**",        # Standalone bridge app, not in src/ import root
]
# Parlant is in a conflict group with crewai and not installed in the default
# venv. Rather than excluding the files (which loses type coverage in a
# dev-parlant venv), tell pyrefly to treat missing parlant modules as Any.
ignore-missing-imports = [
    "parlant.*",
]
# Disable the default **/.[!/.]*/** exclude so pyrefly works inside
# .claude/worktrees/ (git worktree paths contain a hidden directory).
disable-project-excludes-heuristics = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.2"
version_files = [
    "pyproject.toml:version",
    "src/thenvoi/__init__.py:__version__",
]
# Tag format aligned with release-please (package-name-v$version)
tag_format = "thenvoi-sdk-python-v$version"
